--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#About"> About </a></li>
             <li><a href="#Services">Services</a></li>
-            <li><a href="/">Projects</a></li>
+            <li><a href="#proj">Projects</a></li>
             <li><a href="#Contact Me">Contact Me</a></li>
           </ul>
         </div>
@@ -139,6 +139,40 @@
         <button class="btnbtn-lg"><a  class="ab" href="https://drive.google.com/file/d/13CWTsIIZFd07fcOeB7yWJPuZm2x-73gy/view?usp=drive_link" target="_blank"> Download Here <svg xmlns="http://www.w3.org/2000/svg" class="down" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M288 32c0-17.7-14.3-32-32-32s-32 14.3-32 32V274.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0l128-128c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L288 274.7V32zM64 352c-35.3 0-64 28.7-64 64v32c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V416c0-35.3-28.7-64-64-64H346.5l-45.3 45.3c-25 25-65.5 25-90.5 0L165.5 352H64zm368 56a24 24 0 1 1 0 48 24 24 0 1 1 0-48z"/></svg></a></button>
       </div>
       </section>
+      <hr class="fifth">
+      <div id="proj"> Projects </div>
+      <section class="fifthsection">
+        <section class="cal1">
+        <div class="calculator">
+          <div class="image-cal">
+              <img src="calthumbnail.png" alt="Profile Photo">
+          </div>
+          <div class="cal">
+              <h2 class="project-name"><a href="https://vighnesh1436.github.io/Calculator/" target="_blank" class="ar"> Calculator <svg class="arrow" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></a></h2>
+          </div>
+          </div>
+          </section>
+          <section class="TO1">
+          <div class="To-Do-List">
+            <div class="image-To-Do">
+                <img src="To-Do-thumbnail.png" alt="Profile Photo">
+            </div>
+            <div class="To-Do-n">
+                <h2 class="project-name"><a href="https://vighnesh1436.github.io/To-Do-List/" target="_blank" class="ar"> To-Do-List <svg class="arrow" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></a></h2>
+            </div>
+          </div>
+          </section>
+          <section class="LoginForm">
+            <div class="Login">
+             <div class="image-Login">
+                  <img src="Login-thumbnail.png" alt="Profile Photo">
+              </div>
+              <div class="Login-n">
+                  <h2 class="project-name"><a href="/" class="ar"> Login Forms <svg class="arrow" xmlns="http://www.w3.org/2000/svg" height="16" width="14" viewBox="0 0 448 512"><!--!Font Awesome Free 6.5.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg></a></h2>
+              </div>
+            </div>  
+            </section>
+      </section>
     </main>
     <footer>
       <div class="footer">
@@ -173,7 +207,7 @@
     <script>
       var typed = new Typed("#element", {
         strings: ["FrontEnd Developer"],
-        typeSpeed: 50,
+        typeSpeed: 100,
       });
     </script>
     <script type="text/javascript" src="js/jquery-3.7.0.min.js"></script>
